WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57801
[Refactoring] <progress> should not have manual layout code.
https://bugs.webkit.org/show_bug.cgi?id=57801
Summary
[Refactoring] <progress> should not have manual layout code.
Hajime Morrita
Reported
2011-04-04 16:11:19 PDT
RenderProgress inherits RenderIndicator, which has its own layout algorithm. We can kick it out as RenderMeter did. Then we can remove RenderIndicator.
Attachments
Patch
(87.24 KB, patch)
2011-04-06 09:18 PDT
,
Hajime Morrita
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2011-04-06 09:18:11 PDT
Created
attachment 88444
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2011-04-06 09:23:47 PDT
Comment on
attachment 88444
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=88444&action=review
> Source/WebCore/html/HTMLProgressElement.h:45 > + ~HTMLProgressElement();
it's gonna be virtual anyway, but should probably say virtual ~HTMLProgressElement?
WebKit Review Bot
Comment 3
2011-04-06 09:47:14 PDT
Attachment 88444
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8343226
Hajime Morrita
Comment 4
2011-04-06 10:03:37 PDT
Committed
r83065
: <
http://trac.webkit.org/changeset/83065
>
WebKit Review Bot
Comment 5
2011-04-06 11:05:46 PDT
http://trac.webkit.org/changeset/83065
might have broken GTK Linux 32-bit Release The following tests are not passing: fast/dom/HTMLProgressElement/progress-bar-value-pseudo-element.html fast/dom/HTMLProgressElement/progress-element.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug