third_party/WebKit/Source/WebCore/html/shadow/ProgressShadowElement.h
@@ -30,43 +30,57 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef ProgressBarValueElement_h
-#define ProgressBarValueElement_h
+#ifndef ProgressShadowElement_h
+#define ProgressShadowElement_h
 
 #include "HTMLDivElement.h"
-#include "HTMLNames.h"
-#include "RenderProgress.h"
 #include <wtf/Forward.h>
 
 namespace WebCore {
 
-class ProgressBarValueElement : public HTMLDivElement {
+class HTMLProgressElement;
+
+class ProgressShadowElement : public HTMLDivElement {
 public:
-    ProgressBarValueElement(Document* document) 
-        : HTMLDivElement(HTMLNames::divTag, document)
+    ProgressShadowElement(Document*);
+    HTMLProgressElement* progressElement() const;
+
+private:
+    virtual bool rendererIsNeeded(RenderStyle*);
+};
+
+class ProgressBarElement : public ProgressShadowElement {
+public:
+    ProgressBarElement(Document* document) 
+        : ProgressShadowElement(document)
+    {
+    }
+
+    static PassRefPtr<ProgressBarElement> create(Document*);
+    virtual const AtomicString& shadowPseudoId() const;
+};
+
+inline PassRefPtr<ProgressBarElement> ProgressBarElement::create(Document* document)
+{
+    return adoptRef(new ProgressBarElement(document));
+}
+
+
+class ProgressValueElement : public ProgressShadowElement {
+public:
+    ProgressValueElement(Document* document) 
+        : ProgressShadowElement(document)
     {
     }
 
     virtual const AtomicString& shadowPseudoId() const;
-    virtual RenderObject* createRenderer(RenderArena*, RenderStyle*);
-    static PassRefPtr<ProgressBarValueElement> create(Document*);
-
+    static PassRefPtr<ProgressValueElement> create(Document*);
+    void setWidthPercentage(double);
 };
 
-inline const AtomicString& ProgressBarValueElement::shadowPseudoId() const
+inline PassRefPtr<ProgressValueElement> ProgressValueElement::create(Document* document)
 {
-    DEFINE_STATIC_LOCAL(AtomicString, pseudId, ("-webkit-progress-bar-value"));
-    return pseudId;
-}
-
-inline RenderObject* ProgressBarValueElement::createRenderer(RenderArena* arena, RenderStyle*)
-{
-    return new (arena) RenderProgressBarValuePart(this);
-}
-
-inline PassRefPtr<ProgressBarValueElement> ProgressBarValueElement::create(Document* document)
-{
-    return adoptRef(new ProgressBarValueElement(document));
+    return adoptRef(new ProgressValueElement(document));
 }
 
 }
