Source/WebCore/Android.mk
@@ -356,6 +356,7 @@ LOCAL_SRC_FILES := $(LOCAL_SRC_FILES) \
 	\
 	html/shadow/MediaControls.cpp \
 	html/shadow/MeterShadowElement.cpp \
+	html/shadow/ProgressShadowElement.cpp \
 	html/shadow/SliderThumbElement.cpp \
 	html/shadow/TextControlInnerElements.cpp \
 	\
