Source/WebCore/WebCore.pro
@@ -802,6 +802,7 @@ SOURCES += \
     html/parser/XSSFilter.cpp \
     html/shadow/MediaControls.cpp \
     html/shadow/MeterShadowElement.cpp \
+    html/shadow/ProgressShadowElement.cpp \
     html/shadow/SliderThumbElement.cpp \
     html/shadow/TextControlInnerElements.cpp \
     inspector/ConsoleMessage.cpp \
